# allure-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
allure/: Cargo.toml
allure-core/: Cargo.toml
allure-core/src/: enums.rs  error.rs  lib.rs  model.rs  runtime.rs  writer.rs
allure-macros/: Cargo.toml
allure-macros/src/: lib.rs
allure-macros/tests/: ui.rs
allure-macros/tests/ui/fail/: allure_test_on_struct.rs  allure_test_on_struct.stderr  epic_wrong_type.rs  epic_wrong_type.stderr  step_on_struct.rs  step_on_struct.stderr
allure-macros/tests/ui/pass/: valid_usage.rs
allure/examples/: sample_test.rs
allure/src/: lib.rs
allure/tests/: allure_tests.rs  async_tests.rs  framework_compat.rs  integration_tests.rs  native_feature_tests.rs  ui.rs
allure/tests/ui/pass/: valid_usage.rs
