[workspace]
resolver = "2"
members = [
    "allure",
    "allure-core",
    "allure-macros",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andreivcodes/allure-rs"
homepage = "https://github.com/andreivcodes/allure-rs"
documentation = "https://docs.rs/allure-rs"
description = "A comprehensive Rust library for generating Allure test reports"
keywords = ["allure", "testing", "report", "test-framework"]
categories = ["development-tools::testing"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
md-5 = "0.10"
tokio = { version = "1", features = ["rt", "sync"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
tempfile = "3.0"
thiserror = "1.0"
rstest = "0.24"
test-case = "3.3"
